--- a/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj.filters
+++ b/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClInclude Include="src\lua.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Components\GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="Lua535\liblua53.a" />
