--- a/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
+++ b/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
@@ -138,6 +138,10 @@
   <ItemGroup>
     <Library Include="Lua535\liblua53.a" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="src\Sprites\File.txt" />
+    <Text Include="src\Sprites\File2.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
