Implement ASCII animator 1.0

--- a/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj.filters
+++ b/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj.filters
@@ -59,5 +59,8 @@
   <ItemGroup>
     <Text Include="src\Sprites\File.txt" />
     <Text Include="src\Sprites\File2.txt" />
+    <Text Include="src\Sprites\Explosion_3.txt" />
+    <Text Include="src\Sprites\Explosion_1.txt" />
+    <Text Include="src\Sprites\Explosion_2.txt" />
   </ItemGroup>
 </Project>
