--- a/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
+++ b/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
@@ -139,6 +139,9 @@
     <Library Include="Lua535\liblua53.a" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="src\Sprites\Explosion_1.txt" />
+    <Text Include="src\Sprites\Explosion_2.txt" />
+    <Text Include="src\Sprites\Explosion_3.txt" />
     <Text Include="src\Sprites\File.txt" />
     <Text Include="src\Sprites\File2.txt" />
   </ItemGroup>
