Refactor + LoadSprite error handler

--- a/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
+++ b/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
@@ -145,8 +145,8 @@
     <Text Include="src\Sprites\Explosion_1.txt" />
     <Text Include="src\Sprites\Explosion_2.txt" />
     <Text Include="src\Sprites\Explosion_3.txt" />
-    <Text Include="src\Sprites\File.txt" />
-    <Text Include="src\Sprites\File2.txt" />
+    <Text Include="src\Sprites\Tank_1.txt" />
+    <Text Include="src\Sprites\Tank_2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
