Add and test tank shot animation

--- a/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
+++ b/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
@@ -147,6 +147,9 @@
     <Text Include="src\Sprites\Explosion_3.txt" />
     <Text Include="src\Sprites\Tank_1.txt" />
     <Text Include="src\Sprites\Tank_2.txt" />
+    <Text Include="src\Sprites\Tank_Shot_1.txt" />
+    <Text Include="src\Sprites\Tank_Shot_2.txt" />
+    <Text Include="src\Sprites\Tank_Shot_3.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
