--- a/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj.filters
+++ b/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj.filters
@@ -71,5 +71,8 @@
     <Text Include="src\Sprites\Explosion_2.txt" />
     <Text Include="src\Sprites\Tank_1.txt" />
     <Text Include="src\Sprites\Tank_2.txt" />
+    <Text Include="src\Sprites\Tank_Shot_1.txt" />
+    <Text Include="src\Sprites\Tank_Shot_2.txt" />
+    <Text Include="src\Sprites\Tank_Shot_3.txt" />
   </ItemGroup>
 </Project>
