Implement Animator.h to Lua

--- a/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
+++ b/Lua_Embedding/Lua_Embedding/Lua_Embedding.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="Lua535\include\lua.hpp" />
     <ClInclude Include="Lua535\include\luaconf.h" />
     <ClInclude Include="Lua535\include\lualib.h" />
+    <ClInclude Include="src\Components\Lua_Animator.h" />
     <ClInclude Include="src\Components\Lua_Math.h" />
     <ClInclude Include="src\Components\Lua_Sprite.h" />
     <ClInclude Include="src\Components\Lua_GameObject.h" />
